Superficial changes to data presentation, some minor code quality fixes